# KokkosTest

./: .clang-format  Array.h  ArrayApply_test.cpp  ArrayOfBools_test.cpp  ArrayState_test.cpp  CMakeLists.txt  ImageApply_test.cpp  KokkosApply_test.cpp  KokkosContext.h  KokkosReduce_test.cpp  KokkosSmoke_test.cpp  Kokkos_test.cpp  NumpyBenchmarkConvolution.py  README.md  Raster.h  RasterApply_test.cpp  Vector_test.cpp
Linx/Data/: Image.h  Traits.h  Vector.h
cmake/doc/: Doxyfile.in
include/Linx/Base/: Algorithm.h  ArrayPool.h  Containers.h  Exceptions.h  Functional.h  Packs.h  Random.h  Reduction.h  Slice.h  TypeUtils.h  Types.h
include/Linx/Base/concepts/: Arithmetic.h  Array.h
include/Linx/Base/mixins/: Arithmetic.h  Data.h  Math.h  Range.h
include/Linx/Data/: Box.h  Distribution.h  Image.h  Line.h  Patch.h  Random.h  Raster.h  Sequence.h  Slice.h  Tiling.h  Traits.h  Vector.h
include/Linx/Data/concepts/: Array.h  Region.h
include/Linx/Run/: ProgramContext.h  ProgramOptions.h
include/Linx/Transforms/: Correlation.h  Morphology.h  RankFiltering.h  Reduction.h
include/Linx/Transforms/mixins/: FilterMixin.h
python/: NumpyBenchmarkConvolution.py
src/: KokkosBenchmarkConvolution.cpp  KokkosBenchmarkExp.cpp  KokkosBenchmarkIteration.cpp  KokkosBenchmarkMedian.cpp
tests/: AlgorithmSort_test.cpp  BoxApply_test.cpp  BoxArithmetic_test.cpp  BoxCtors_test.cpp  Histogram_test.cpp  ImageApply_test.cpp  ImageCorrelate_test.cpp  ImageCtors_test.cpp  ImageMedianFilter_test.cpp  ImageMorphology_test.cpp  ImagePixelwise_test.cpp  ImageRankFiltering_test.cpp  KokkosSmoke_test.cpp  Packs_test.cpp  Patch_test.cpp  PositionArithmetic_test.cpp  Random_test.cpp  RasterOrdering_test.cpp  Reduction_test.cpp  Region_test.cpp  SequenceArithmetic_test.cpp  SequenceCtors_test.cpp  Sequence_test.cpp  Slice_test.cpp  Tiling_test.cpp  Traits_test.cpp  Vector_test.cpp  Wrap_test.cpp
